# gw2_passives_timer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Source.def  gw2addon.vcxproj  gw2addon.vcxproj.filters
dep/: gw2al_api.h  gw2al_lib_imgui.h
include/: targetver.hpp
include/Addon/: Addon.hpp
include/Gui/: Gui.hpp
include/Main/: Main.hpp
include/MumbleLink/: MumbleLink.hpp
include/Passive/: Passive.hpp
include/Scene/: IScene.hpp  MainScene.hpp  OtherScene.hpp  SettingsScene.hpp  TimerScene.hpp
include/Utils/: Settings.hpp
src/Addon/: Addon.cpp
src/Gui/: Gui.cpp
src/Main/: Main.cpp
src/Scene/: MainScene.cpp  OtherScene.cpp  SettingsScene.cpp  TimerScene.cpp
